--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pixivViewer",
+  "name": "pixivviewer",
   "version": "1.0.3",
   "description": "Extension for viewing comfortably pixiv.",
   "author": "8th713",
