--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "pixivviewer",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "Extension for viewing comfortably pixiv.",
   "author": "8th713",
   "license": "MIT",
   "readmeFilename": "README.md",
   "homepage": "https://sites.google.com/site/8th713lab/Home/chrome/pixivviewer",
   "repository": {
-		"type": "git",
-		"url": "https://github.com/8th713/pixivViewer.git"
-	},
+    "type": "git",
+    "url": "https://github.com/8th713/pixivViewer.git"
+  },
   "main": "Gruntfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,10 +17,10 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-jade": "~0.6.0",
-    "grunt-contrib-less": "~0.5.2",
+    "grunt-contrib-jade": "~0.8.0",
+    "grunt-contrib-less": "~0.7.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.2",
-    "grunt-regarde": "~0.1.1"
+    "grunt-contrib-watch": "~0.5.1"
   }
 }
