--- a/assets/fontello/config.json
+++ b/assets/fontello/config.json
@@ -17,6 +17,12 @@
       "src": "fontawesome"
     },
     {
+      "uid": "1400d5103edd2fa6d2d61688fee79a5a",
+      "css": "ok-squared",
+      "code": 57361,
+      "src": "fontawesome"
+    },
+    {
       "uid": "e82cedfa1d5f15b00c5a81c9bd731ea2",
       "css": "info-circled",
       "code": 57352,
