--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixivviewer",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Extension for viewing comfortably pixiv.",
   "author": "8th713",
   "license": "MIT",
@@ -10,17 +10,15 @@
     "type": "git",
     "url": "https://github.com/8th713/pixivViewer.git"
   },
-  "main": "Gruntfile.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "devDependencies": {
     "grunt": "~0.4.1",
+    "load-grunt-tasks": "~0.2.0",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-jade": "~0.8.0",
-    "grunt-contrib-less": "~0.7.0",
+    "grunt-contrib-less": "~0.8.2",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-watch": "~0.5.2"
+    "grunt-contrib-uglify": "~0.2.7",
+    "grunt-my-crx": "git+https://github.com/8th713/grunt-my-crx.git",
+    "grunt-este-watch": "~0.1.10"
   }
 }
